{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "fc638c36-2570-42c0-b931-dc8c688ed44c",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "81b2c148-47b4-4db4-bd2f-bb24ea2bb87d",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "a3edb5d4-147c-45db-8dcf-4bcc19beb48c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "fcbea184-ec53-4251-80bc-c8ef37f657df",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "7192d146-3694-4d06-ab3d-f86843c70bc7",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "86b6e0bd-62ac-423a-8d74-1a0d34469777",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "51d88ffb-a87a-4b58-bb2b-3130417c2065",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}